@@ -1,16 +1,89 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+  ~ Copyright (c) 2013-2017 GraphAware
+  ~
+  ~ This file is part of the GraphAware Framework.
+  ~
+  ~ GraphAware Framework is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License
+  ~ as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
+  ~
+  ~ This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied
+  ~ warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
+  ~
+  ~ You should have received a copy of the GNU General Public License along with this program. If not, see <http://www.gnu.org/licenses />.
+  -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+
   <parent>
     <groupId>com.graphaware.neo4j</groupId>
     <artifactId>module-parent</artifactId>
     <version>3.1.3.47</version>
   </parent>
-    
-  <groupId>com.graphaware.neo4j</groupId>
+
   <artifactId>nlp</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
+
+  <name>Natural Language Processing with Neo4j</name>
+  <description>GraphAware Framework Module for adding NLP capabilities to Neo4j.</description>
+  <url>https://graphaware.com</url>
+
+  <licenses>
+    <license>
+      <name>GNU General Public License, version 3</name>
+      <url>http://www.gnu.org/licenses/gpl-3.0.txt</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+
+  <scm>
+    <connection>scm:git:git@github.com:graphaware/neo4j-nlp.git</connection>
+    <developerConnection>scm:git:git@github.com:graphaware/neo4j-nlp.git</developerConnection>
+    <url>git@github.com:graphaware/neo4j-nlp.git</url>
+    <tag>HEAD</tag>
+  </scm>
+
+  <developers>
+    <developer>
+      <id>alenegro</id>
+      <name>Alessandro Negro</name>
+      <email>alessandro@graphaware.com</email>
+    </developer>
+    <developer>
+      <id>ikwattro</id>
+      <name>Christophe Willemsen</name>
+      <email>christophe@graphaware.com</email>
+    </developer>
+    <developer>
+      <id>vlasta-kus</id>
+      <name>Vlastimil Kus</name>
+      <email>vlasta@graphaware.com</email>
+    </developer>
+    <developer>
+      <id>graphaware</id>
+      <name>GraphAware</name>
+      <email>nlp@graphaware.com</email>
+    </developer>
+  </developers>
+
+  <ciManagement>
+    <url>https://travis-ci.org/graphaware/neo4j-nlp</url>
+    <system>Travis CI</system>
+  </ciManagement>
+
+  <inceptionYear>2015</inceptionYear>
+
+  <issueManagement>
+    <system>GitHub</system>
+    <url>https://github.com/graphaware/neo4j-nlp/issues</url>
+  </issueManagement>
+
+  <organization>
+    <name>Graph Aware Limited</name>
+    <url>https://graphaware.com</url>
+  </organization>
+
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
@@ -24,95 +97,120 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-webmvc</artifactId>
     </dependency>
+
     <dependency>
       <groupId>org.neo4j</groupId>
       <artifactId>neo4j</artifactId>
       <scope>provided</scope>
     </dependency>
+
     <dependency>
       <groupId>com.graphaware.neo4j</groupId>
       <artifactId>runtime</artifactId>
       <scope>provided</scope>
     </dependency>
+
     <dependency>
       <groupId>com.graphaware.neo4j</groupId>
       <artifactId>runtime-api</artifactId>
       <scope>provided</scope>
     </dependency>
+
     <dependency>
       <groupId>com.sun.jersey</groupId>
       <artifactId>jersey-client</artifactId>
       <version>1.19.1</version>
     </dependency>
+
     <dependency>
       <groupId>com.sun.jersey</groupId>
       <artifactId>jersey-json</artifactId>
       <version>1.19.1</version>
     </dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <scope>test</scope>
     </dependency>
+
     <dependency>
       <groupId>com.esotericsoftware.kryo</groupId>
       <artifactId>kryo</artifactId>
       <version>2.24.0</version>
       <scope>test</scope>
     </dependency>
+
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-core</artifactId>
-      <!--scope>test</scope-->
     </dependency>
+
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-annotations</artifactId>
-      <!--scope>test</scope-->
     </dependency>
-    <dependency>
-      <groupId>org.hamcrest</groupId>
-      <artifactId>hamcrest-core</artifactId>
-      <version>1.3</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.graphaware.neo4j</groupId>
-      <artifactId>tests</artifactId>
-      <version>${graphaware.version}</version>
-      <scope>test</scope>
-    </dependency>
+
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
     </dependency>
+
     <dependency>
       <groupId>com.optimaize.languagedetector</groupId>
       <artifactId>language-detector</artifactId>
       <version>0.5</version>
     </dependency>
+
     <dependency>
       <groupId>org.reflections</groupId>
       <artifactId>reflections</artifactId>
       <version>0.9.10</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.7.21</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.6</version>
+    </dependency>
+
+
+    <!--Test dependencies-->
+
     <dependency>
       <groupId>com.graphaware.neo4j</groupId>
       <artifactId>server</artifactId>
       <version>${graphaware.version}</version>
       <scope>test</scope>
     </dependency>
+
     <dependency>
       <groupId>com.graphaware.neo4j</groupId>
       <artifactId>resttest</artifactId>
-      <scope>test</scope>
       <version>${resttest.version}</version>
+      <scope>test</scope>
     </dependency>
+
     <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <version>1.7.21</version>
+      <groupId>org.hamcrest</groupId>
+      <artifactId>hamcrest-core</artifactId>
+      <version>1.3</version>
+      <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>com.graphaware.neo4j</groupId>
+      <artifactId>tests</artifactId>
+      <version>${graphaware.version}</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
   <build>
     <plugins>
@@ -135,6 +233,26 @@
             </goals>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>3.0.2</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>test-jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.19.1</version>
+        <configuration>
+          <argLine>-Xmx2048m -XX:MaxPermSize=512m</argLine>
+        </configuration>
       </plugin>
     </plugins>
   </build>
